--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,6 +37,7 @@
         <li><a href="/admin/templates/site">Site Template</a></li>
         <li><a href="/admin/plugins">Plugins</a></li>
         <li><a href="/admin/assets">Assets</a></li>
+        <li><a href="/admin/cards">Data Cards</a></li>
         <li><a href="/admin/users">Users</a></li>
       </ul>
 
